Fixed bug on tests ending with 's'
Added comments, improved readability

--- a/src/main/man/provashell.1
+++ b/src/main/man/provashell.1
@@ -1,9 +1,10 @@
 .\" Manpage for provashell.
-.TH PROVASHELL 1 ""
+.TH PROVASHELL 1
 .SH NAME
-provashell \- execute shell unit tests
+provashell \- execute shell unit tests the easy way
 .SH SYNOPSIS
-. provashell
+.B . foo
+
 .SH DESCRIPTION
 xxxx
 .SH OPTIONS
